--- a/example/Makefile
+++ b/example/Makefile
@@ -11,7 +11,8 @@ COMM_DIR = ../src
 #-lr -lstdc++
 COMM_LIB = $(COMM_DIR)/cm_lib.a -I$(COMM_DIR) 
 
-ALL_BINARY = test_cm_cfg test_cm_log test_cm_shm test_cm_debug
+ALL_BINARY = test_cm_cfg test_cm_log test_cm_shm test_cm_debug \
+			 test_cm_binary
 
 ARGS = -g -Wall -fno-strict-aliasing #-Qunused-arguments
 
@@ -37,6 +38,8 @@ test_cm_shm : test_cm_shm.o
 test_cm_debug : test_cm_debug.o
 	$(CC) $(ARGS) -o $@ $^ $(COMM_LIB)
 
+test_cm_binary : test_cm_binary.o
+	$(CC) $(ARGS) -o $@ $^ $(COMM_LIB)
 
 
 clean:
